--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="mysql://root:@localhost:3306/sakara_db"
 JWT_SECRET=sakara123
+
+NEXTAUTH_SECRET=sakara12345
+NEXTAUTH_URL=http://localhost:3000
