--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
