--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "web-bluetooth": "^0.1.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
