--- a/.env
+++ b/.env
@@ -4,5 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:@localhost:3306/sakara_db"
+DATABASE_URL="mysql://root:password@localhost:3306/sakara_db"
 JWT_SECRET=sakara123
+
+NEXT_PUBLIC_MIDTRANS_CLIENT_KEY=SB-Mid-client-C4IYrLMfARwDIltz
+MIDTRANS_SERVER_KEY_SANDBOX=SB-Mid-server-6geZLI0Ra0E0Ex8qa1W6xSDN
+
+#Ganti jika menggunakan production
+NODE_ENV=development 
