--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
+    "midtrans-client": "^1.3.1",
     "next": "14.2.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
