--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:@localhost:3306/sakara_db"
+DATABASE_URL="mysql://root:password@localhost:3306/sakara_db"
 JWT_SECRET=sakara123
