--- a/package.json
+++ b/package.json
@@ -9,27 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "bcrypt": "^5.1.1",
+    "busboy": "^1.6.0",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
+    "mv": "^2.1.1",
     "next": "14.2.4",
+    "next-connect": "^1.0.0",
+    "path": "^0.12.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-number-format": "^5.4.0",
+    "stream": "^0.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/node": "22.1.0",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
