--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-number-format": "^5.4.0",
+    "rupiah-format": "^1.0.0",
     "stream": "^0.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
