update(ready testing): all complete

--- a/.env
+++ b/.env
@@ -9,5 +9,8 @@ JWT_SECRET=sakara123
 NEXT_PUBLIC_MIDTRANS_CLIENT_KEY=SB-Mid-client-C4IYrLMfARwDIltz
 MIDTRANS_SERVER_KEY_SANDBOX=SB-Mid-server-6geZLI0Ra0E0Ex8qa1W6xSDN
 
+NEXTAUTH_SECRET=sakara12345
+NEXTAUTH_URL=http://localhost:3000
+
 #Ganti jika menggunakan production
 NODE_ENV=development 
