--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multiparty": "^4.2.3",
     "mv": "^2.1.1",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-connect": "^1.0.0",
     "path": "^0.12.7",
     "react": "^18",
